--- a/V0.0/10ml/prj/10bos.build_log.htm
+++ b/V0.0/10ml/prj/10bos.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      Segger\JL2CM3.dll V2.97.0.0
 Dialog DLL:      TCM.DLL V1.14.1.0
  
 <h2>Project:</h2>
-E:\周浦\work\程杰\soft\pump_highend\V0.0\10ml\prj\10bos.uvprojx
+E:\research\周浦\work\程杰\soft\pump_highend\V0.0\10ml\prj\10bos.uvprojx
 Project File Date:  06/05/2018
 
 <h2>Output:</h2>
@@ -81,7 +81,7 @@ Package Vendor: ARM
    * Component: CORE Version: 5.0.2
 
 <h2>Collection of Component include folders:</h2>
-  E:\周浦\work\程杰\soft\pump_highend\V0.0\10ml\prj\RTE
+  E:\research\周浦\work\程杰\soft\pump_highend\V0.0\10ml\prj\RTE
   D:\Keil_v5\ARM\PACK\ARM\CMSIS\5.1.1\CMSIS\Include
   D:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
